<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:focusable="true"
    android:focusableInTouchMode="true">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >"

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="20dp">
        <TextView
        android:id="@+id/individual_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_info" 
        android:textSize="24sp"
        android:textColor="#000000"
        android:paddingLeft="20dp"/>
        
        <TextView
            android:id="@+id/modift_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/individual_info_tv"
            android:layout_alignParentRight="true"
            android:text="@string/modify_pw"
            android:textSize="15sp"
            android:textColor="#0000ff"/>
    </RelativeLayout>
   
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_sep" 
        android:paddingTop="10dp"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">
        
         <ImageView android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/defaultavatar"
        />
     
        <ImageView
            android:id="@+id/settings_gender"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/avatar"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/male"/>
                 
        <TextView
            android:id="@+id/settings_email"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/settings_gender"
        	android:paddingLeft="30dp"
        	android:layout_alignTop="@id/avatar"
        	android:text=""
         	android:textSize="15sp"
          	android:textColor="#aaaaaa"/>
            
          <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/avatar"
        android:paddingLeft="20dp">
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="15sp"
            android:textColor="#aaaaaa"/>
        <EditText
            android:id="@+id/settings_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textSize="15sp"
            android:textColor="#aaaaaa" />
        
    </LinearLayout>
    
    </RelativeLayout>
         
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textColor="#aaaaaa"
            android:textSize="15sp"/>
        
           <EditText 
             android:id="@+id/settings_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="15sp"
             android:textColor="#aaaaaa"/>
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="#aaaaaa"
            android:paddingTop="10dp"/>
        
        <EditText 
            android:id="@+id/settings_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:textColor="#aaaaaa" />
    
</LinearLayout>

</LinearLayout>

</ScrollView>