<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw"
            android:textColor="#000000"
            android:textSize="24sp"/>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_sep3"
            android:paddingTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/current_pw_word"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_word"
                android:text="@string/current_pw"
                android:textColor="#000000"
                android:textSize="15sp" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/current_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_edittext"
                android:layout_toRightOf="@id/current_pw_word"
                android:textColor="#aaaaaa"
                android:textSize="15sp"
                android:inputType="textPassword" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/new_pw_word"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_word"
                android:text="@string/new_pw"
                android:textColor="#000000"
                android:textSize="15sp" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/new_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_edittext"
                android:layout_toRightOf="@id/new_pw_word"
                android:textColor="#aaaaaa"
                android:textSize="15sp"
                android:inputType="textPassword" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/ack_pw_word"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_word"
                android:text="@string/ack_pw"
                android:textColor="#000000"
                android:textSize="15sp" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/ack_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_edittext"
                android:layout_toRightOf="@id/ack_pw_word"
                android:textColor="#aaaaaa"
                android:textSize="15sp"
                android:inputType="textPassword" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <Button
            android:id="@+id/settings_ack_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="@drawable/settings_ack_button"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
            
        </RelativeLayout>
        

    </LinearLayout>
    

</LinearLayout>
