<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#edebe4"
    android:paddingTop="15dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingBottom="15dip"
    android:scrollbars="none"
    tools:context=".MainActivity" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingBottom="15dip"
    	android:background="#ffffff">
        <RelativeLayout 
            android:id="@+id/topBlock"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        >
		        <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="10dip"
			        android:background="#9ee5ce">
			    </LinearLayout>
			    
			    <LinearLayout 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#3ecc9d"
			        android:layout_centerHorizontal="true">
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="10dip"
			            android:layout_marginBottom="10dip"
			            android:layout_marginLeft="20dip"
			            android:layout_marginRight="20dip"
			            android:textColor="#ffffff"
			            android:textSize="15sp"
			            android:text="活动信息"/>
			    </LinearLayout>
	    </RelativeLayout>
	    
        <RelativeLayout 
            android:id="@+id/inputBlock"
            android:layout_below="@+id/topBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip">
            <LinearLayout 
                android:id="@+id/activityThemeBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="活动主题"
                    android:paddingTop="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingBottom="5dip"
                    android:textSize="15sp"
                    android:textColor="#999"
                    android:background="@drawable/activityinputhint"/>
                <EditText 
                    android:id="@+id/activityTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:background="@drawable/activityinputbefore"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/activityDateBlock"
                android:layout_below="@+id/activityThemeBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="center">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activitytime"
                    android:paddingTop="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingBottom="5dip"
                    android:textSize="15sp"
                    android:textColor="#999"
                    android:background="@drawable/activityinputhint"/>
                <TextView 
                    android:id="@+id/activityDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:background="@drawable/activityinputbefore"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/activityLocBlock"
                android:layout_below="@+id/activityDateBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"

                android:gravity="center">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activityLoc"
                    android:paddingTop="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingBottom="5dip"
                    android:textColor="#999"
                    android:textSize="15sp"
                    android:background="@drawable/activityinputhint"/>
                <EditText 
                    android:id="@+id/activityLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"      
                    android:singleLine="true"            
                    android:background="@drawable/activityinputbefore"/>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/backupBlock"
                android:layout_below="@+id/activityLocBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="center">
               <EditText
                    android:id="@+id/backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" 
                    android:hint="@string/backupHint"
                    android:gravity="top"
                    android:textSize="15sp"
                    android:background="@drawable/activityinputbefore">
                </EditText>            
            </LinearLayout>
            
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/thirdBlock"
            android:layout_below="@+id/inputBlock"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout 
                android:id="@+id/addParticipantBlock"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:paddingTop="10dip"
                android:orientation="horizontal"
                >
                <com.app.addActivityPack.CircularImage
        					android:id="@+id/addParticipantBtn"
					        android:layout_width="25.0dip"
					        android:layout_height="25.0dip"
					        android:layout_centerInParent="true" />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_marginLeft="5dip"
                    android:textColor="#999"
                     android:textSize="12sp"
                    android:text="邀请好友"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dip">
                <CheckBox 
                    android:id="@+id/canjoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:textColor="#999"
                     android:textSize="12sp"
                    android:text="允许陌生人参与"/>
            </LinearLayout>
        </RelativeLayout>
        
        <LinearLayout 
            android:id="@+id/paticipantsBlock"
            android:layout_below="@+id/thirdBlock"
            android:layout_marginLeft="30dip"
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">	
            <TextView 
                android:id="@+id/showparticipant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>	   
        </LinearLayout>
        
        <View 
            android:id="@+id/divider"
            android:layout_below="@+id/paticipantsBlock"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="30dip"
             android:layout_marginRight="30dip"
            android:background="?android:attr/listDivider"/>
        
        <LinearLayout 
            android:id="@+id/btnBlock"
            android:layout_below="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="50dip"
             android:layout_marginRight="50dip"
             android:layout_marginTop="10dip"
            android:orientation="horizontal">
            <LinearLayout 
                android:id="@+id/submitActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/submitactivity"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#999"
                     android:textSize="12sp"
                    android:text="创建"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right"
				
                android:orientation="vertical">
                <ImageView 
                    android:id="@+id/cancelActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancelactivity"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#999"
                     android:textSize="12sp"                   
                    android:text="舍弃"/>
            </LinearLayout>
        </LinearLayout>
        
    </RelativeLayout>
    
</ScrollView>
